--- a/_posts/en/pages/2015-10-02-about.md
+++ b/_posts/en/pages/2015-10-02-about.md
@@ -3,6 +3,18 @@ layout: page
 title: About
 ---
 
-## About
+## What is BananPaj?
+BananPaj is swedish for banana pie. The worlds best desserts and likewise a 
+one man company. BananPAJ is owned by Per Adam Johannes Sernheim. There for the
+capitalized PAJ.
 
-I can be developer.
+BananPAJ is a part of Kvadrat. A consortium.Företaget är anslutet till Kvadrat, ett konsortsium bestående av idel
+egenföretagare.
+
+## Who is Adam Sernheim?
+En systemutvecklare med huvudkompetens i Java.
+
+Adam är ständigt på jakt efter ny kunskap och han delar gärna med sig av det han
+kan, till exempel på sin tekniska blogg eller via föreläsningar. Är ni sugna på
+att veta mer om detta är ni välkommna att kontakta mig genom kontaktsidan.
+
