Started working with text

--- a/_posts/sv/pages/2015-10-02-om.md
+++ b/_posts/sv/pages/2015-10-02-om.md
@@ -1,13 +1,19 @@
 ---
 layout: page
-title: About
+title: Om
 lang: sv
 ---
 
-## About
+## Vad är BananPAJ?
 
-I can be developer.
+BananPAJ är världens bäst efterrätt och tillika ett enmansföretag.
 
-## Nått om nått annat
+Företaget är anslutet till konsortsiet Kvadrat som består av idel
+egenföretagare.
 
-Stuffs och sånt
+## Vem är Adam Sernheim?
+En systemutvecklare med huvudkompetens i Java.
+
+Adam är ständigt på jakt efter ny kunskap och han delar gärna med sig av det han
+kan, till exempel på sin tekniska blogg eller via föreläsningar. Är ni sugna på
+att veta mer om detta är ni välkommna att kontakta mig genom kontaktsidan.
